rosdep: add libserialport package keys to database
Signed-off-by: Adrian-Stanea <Adrian.Stanea@analog.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6193,6 +6193,18 @@ libsensors4-dev:
 libserial-dev:
   debian: [libserial-dev]
   ubuntu: [libserial-dev]
+libserialport-dev:
+  ubuntu: [libserialport-dev]
+  debian: [libserialport-dev]
+  fedora: [libserialport-devel]
+  arch: [libserialport]
+  gentoo: [dev-libs/libserialport]
+  osx:
+    homebrew:
+      packages: [libserialport]
+  alpine: [libserialport-dev]
+  opensuse: [libserialport]
+  rhel: [libserialport-devel]
 libshaderc-dev:
   alpine: [shaderc-dev]
   arch: [shaderc]
