rosdep: add libaio package keys to database
Signed-off-by: Adrian-Stanea <Adrian.Stanea@analog.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2612,6 +2612,18 @@ libadolc-dev:
   nixos: [adolc]
   opensuse: [adolc-devel]
   ubuntu: [libadolc-dev]
+libaio-dev:
+  debian: [libaio-dev]
+  ubuntu: [libaio-dev]
+  fedora: [libaio-devel]
+  arch: [libaio]
+  gentoo: [dev-libs/libaio]
+  osx:
+    homebrew:
+      packages: [libaio]
+  alpine: [libaio-dev]
+  opensuse: [libaio]
+  rhel: [libaio-dev]
 libalglib-dev:
   arch: [alglib]
   debian: [libalglib-dev]
